# fast-rm

./: .gitignore  BENCHMARK.md  CLAUDE.md  Cargo.toml  README.md  README_zh-CN.md  benchmark_quick.sh
.trae/documents/: 模块化拆分 fast-rm main.rs.md
.trae/rules/: project_rules.md
benches/: context_switch_test.rs  deletion_benchmark.rs  overhead_measurement.rs
src/: cli.rs  config.rs  deleter.rs  errors.rs  main.rs  path.rs  progress.rs  queue.rs  removal.rs  results.rs  scanner.rs
tests/: concurrency_tests.rs
