[package]
name = "fast-rm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
colored = "2.0.0"
rayon = "1.10.0"
indicatif = "0.17"
crossterm = "0.27"
crossbeam-channel = "0.5"

[dev-dependencies]
tempfile = "3.8"
