[package]
name = "fast-rm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
colored = "2.0.0"
rayon = "1.10.0"
indicatif = "0.17"
crossterm = "0.27"
crossbeam-channel = "0.5"
num_cpus = "1.17.0"

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
tempfile = "3.8"

[[bench]]
name = "deletion_benchmark"
harness = false

[[bench]]
name = "overhead_measurement"
harness = false
